@@ -8,12 +8,15 @@
                      [ name => 'countryName', input => 'text',
                        printableName => __('Country code'),
                        size => '2',
+                       value => 'US',
                        optional => 1 ],
                      [ name => 'localityName', input => 'text',
                        printableName => __('City'),
+                       value => 'Undefined',
                        optional => 1 ],
                      [ name => 'stateName', input => 'text',
                        printableName => __('State'),
+                       value => 'Undefined',
                        optional => 1 ],
                      [ name => 'expiryDays', input => 'text',
                        printableName => __('Days to expire'),
