@@ -1,4 +1,5 @@
 4.0
+	+ Allow to customize CA attributes on initial configuration wizard
 	+ Provision action triggers save changes action
 	+ Fixed deprovision
 	+ OpenChange account is enabled by default for all the new created users
